Radcliffe 2: Fix Social Icons Block alignment

--- a/radcliffe-2/assets/css/blocks.css
+++ b/radcliffe-2/assets/css/blocks.css
@@ -308,6 +308,12 @@ ul.wp-block-gallery li {
 	display: none;
 }
 
+/* Social Links */
+
+.wp-block-social-links[class*="align"] {
+	display: flex;
+}
+
 /* Tables */
 
 .wp-block-table {
@@ -332,12 +338,6 @@ ul.wp-block-gallery li {
 	.wp-block-table.alignwide {
 		width: 1110px;
 	}
-}
-
-/* Social Links */
-
-.wp-social-link {
-	display: inline-block;
 }
 
 /*--------------------------------------------------------------
